--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -8,8 +8,19 @@
      <script src="{% static '/js/script.js' %}" type="text/javascript"></script>    
 </head>
 <body bgcolor="white">
-	<h2 style="background-color: #999966;border: 1px sold black;border-radius: 10px;color:white;width: 450px;text-align:center;">Django Static Files Handling</h2>
-<img src="{% static '/downloaddjango.png' %}" alt="My image" height="300px" width="700px"/>&emsp;&emsp;
+	<div style="background-color: #f2f2f2;margin-left: 50px;margin-right: 10px;padding: 12px;border:0.2px black;width:1050px;border-radius: 5px;border:1px solid;box-shadow: 5px 10px #888888;">
+		<div align="center">
+	<h2 style="background-color: #999966;border: 1px sold black;border-radius: 10px;color:white;width: 450px;text-align:center;">Django Static Files Handling</h2></div>
+<pre>
+	<p style="color: black;font-family: bold;font-size: 18px;">&emsp;&emsp;Django Tutorial provides basic and advanced concepts of Django. Our Django Tutorial is designed for beginners and professionals both.
+
+Django is a Web Application Framework which is used to develop web applications.
+
+Our Django Tutorial includes all topics of Django such as introduction, features, installation, environment setup, admin interface,<br> cookie, form validation, Model, Template Engine, Migration, MVT etc. All the topics are explained in detail so that reader <br>can get enought knowledge of Django.</p>
+</pre>
+<img src="{% static '/downloaddjango.png' %}" alt="My image" height="180px" width="250px" style="border-radius: 10px" align="right"/>&emsp;&emsp;
+<br>
+<br>
 <br>
 <br><br>
 <br>
@@ -18,7 +29,12 @@
 <br><br>
 <br>
 <br>
+<br><br>
+<br>
+<br>
+
 <marquee style="background-color: #999966;font-family: bold;font-size: 20px;color:white;padding: 5px;">© Copyright 
 <mark>2019-2020</mark>  All rights reserved .</marquee>
+</div>
 </body>  
 </html>
